@@ -21,13 +21,13 @@ public final class HistoryCommand {
     private static final int LIMIT_HISTORY = 14;
     private static final AppLogger logger = new AppLogger(HistoryCommand.class);
     public void execute(IOProvider io) {
-        try (Context context = Context.newId()) {
+        try (Context ignored = Context.newId()) {
             logger.debug("Executing history command");
             var history = HistoryCommands.INSTANCE.getLinkedList();
             logger.debug("Total commands in history: {}", history.size());
             List<String> list = history.stream()
                     .limit(LIMIT_HISTORY)
-                    .collect(Collectors.toList());
+                    .toList();
             logger.info("Displaying last {} commands", list.size());
             list.forEach(io::println);
             logger.debug("History command completed");
